# atlas_sim_program

./: .gitattributes  .gitignore  README.md
EfficientNet-B0/: AtlasEffB0_v0_server.py
dataset/: .gitignore  delete_data_bin_files.py  process_image_data.py
godot/: .gitignore  25042_Perseverance.glb.import  25042_Perseverance_arm_graphics.jpg.import  25042_Perseverance_blade.jpg.import  25042_Perseverance_clear.png.import  25042_Perseverance_cvoidPlaque.jpg.import  25042_Perseverance_foil_n.jpg.import  25042_Perseverance_foil_n_17.jpg.import  25042_Perseverance_glass.png.import  25042_Perseverance_mars_2020_01.jpg.import  25042_Perseverance_mars_2020_01_n.jpg.import  25042_Perseverance_mars_2020_02.jpg.import  25042_Perseverance_mars_2020_02_n.jpg.import  25042_Perseverance_mars_2020_03.jpg.import  25042_Perseverance_mars_2020_04.jpg.import  25042_Perseverance_mars_2020_05.jpg.import  25042_Perseverance_mars_2020_05_n.png.import  25042_Perseverance_mars_2020_05_r.jpg.import  25042_Perseverance_mars_2020_06.jpg.import  25042_Perseverance_mars_2020_06_n.jpg.import  25042_Perseverance_mars_2020_07_BLACKOUT.jpg.import  25042_Perseverance_mars_2020_hub.jpg.import  25042_Perseverance_mars_2020_hub_n.jpg.import  25042_Perseverance_mars_2020_spring_n.jpg.import  25042_Perseverance_nameplate.jpg.import  25042_Perseverance_sample_handling_door.jpg.import  data_collector.gd  data_collector.gd.uid  (+17 more)
ros2/atlas_sim/: README.md  package.xml
ros2/atlas_sim/launch/: sim_launch.py
ros2/atlas_sim/scripts/: convert_STL_to_PNG.py
ros2/atlas_sim/worlds/: apollo11.sdf  tugbot_depot.sdf
(+84 files in other folders)
